api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipesapi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipesapi
  template:
    metadata:
      labels:
        app: recipesapi
    spec:
      containers:
        - name: recipe
          image: 132900311735.dkr.ecr.us-east-1.amazonaws.com/daira:latest
          ports:
            - containerPort: 8000
