services.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipesapi-service
spec:
  selector:
    app: recipesapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
